// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`example.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<![CDATA[<app-alert>
  Lorem ipsum dolor sit amet consectetur adipisicing elit.
</app-alert>]]>
=====================================output=====================================
<![CDATA[<app-alert>
  Lorem ipsum dolor sit amet consectetur adipisicing elit.
</app-alert>]]>
================================================================================
`;

exports[`interpolation.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<![CDATA[{{  title     +    subtitle  }}
  <span   class="value">  keep    these  spaces  </span>
]]>
=====================================output=====================================
<![CDATA[{{  title     +    subtitle  }}
  <span   class="value">  keep    these  spaces  </span>
]]>
================================================================================
`;
